--- a/install.txt
+++ b/install.txt
@@ -42,6 +42,10 @@ sudo apt-get install dnsmasq hostapd
 sudo systemctl stop dnsmasq
 sudo systemctl stop hostapd
 
+# copy dnsmasq.conf into /etc/dnsmasq.d/
+
+# copy hostapd.conf into /etc/hostapd/
+
 ####################
 ## Install Syncthing on Raspbian
 # Add the release PGP keys:
